# python-play-24

./: pyproject.toml
games/: palindromes.py
hello/: app.py
hello/games/: palindromes.py
src/games/: palindromes.py
src/hello/: app.py
