[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "RyansApp"
version = "1.0"

dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov[all]",
    "black",
    "pylint",
    "ruff"
]

[project.scripts]
greet = "hello.app:greet"
goodbye = "hello.app:salute"
play = "games.palindromes:play_palindromes"

[tool.pylint.main]
max-line-length = 120
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "W0621"  # redefined-outer-name
]
module-naming-style = "any"